A bunch more 1.18 work